--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,15 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>common.utils</name>
   <description>java common utils</description>
+  
+  
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.0.4</version>
+		</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
